Item1233: fixes scrollbar problem, but introduces a new one: the action buttons top right move out of sight
git-svn-id: http://develop.twiki.org/svn/twiki/branches/DEVELOP/twikiplugins@8195 a00a5322-12db-0310-a70b-8735589c885e

--- a/PatternSkin/pub/TWiki/PatternSkin/layout.css
+++ b/PatternSkin/pub/TWiki/PatternSkin/layout.css
@@ -53,6 +53,8 @@ html body {
 #patternPage {
 }
 #patternColumnWrapper {
+}
+#patternMain {
 	width:100%;
 }
 #patternLeftBar,
